# archguard

./: .archguard.toml  .env.example  .gitignore  .symmetra.toml  AI_FIRST_ARCHITECTURE.md  CONTRIBUTING.md  README.md  archguard_http_server.py  archguard_server.py  llms.txt  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  run_tests.py  test_claude_config.json  test_simple_server.py
.claude/: mcp.json
docs/: ARCHITECTURE_FLOW.md  CLAUDE_CODE_INTEGRATION.md  IMPLEMENTATION.md  ORIGINAL_SPEC.md  README.md  TESTING_RESULTS.md  claude-code-config.json  mkdocs.yml
docs.old/: README.md  index.md
docs.old/api/: mcp-tools.md
docs.old/architecture/: data-flow.md  embedding-job-system.md
docs.old/deployment/: COST_ANALYSIS.md
docs.old/examples/: orm-best-practices.md
docs.old/getting-started/: installation.md
docs.old/operations/: troubleshooting.md
docs.old/production/: DEPLOYMENT_STRATEGY.md  IMPLEMENTATION_PLAN.md  PRODUCTION_ARCHITECTURE.md  PRODUCTION_CHECKLIST.md
docs.old/rules/: python-project-essentials.md
docs.old/setup/: IMPLEMENTATION_SUMMARY.md  PROJECT_CONFIG_EXAMPLE.md
docs.old/technical/: IMPLEMENTATION.md  TESTING_RESULTS.md
docs.old/testing/: README.md  strategy.md
docs.old/user/: claude-code-config.json  configuration.md
docs/api/: database-schema.md  mcp-tools.md
docs/content/: index.md
docs/deployment/: CLOUD_EMBEDDINGS.md
docs/javascripts/: extra.js
docs/marketing/: linkedin.md
docs/operations/: setup.md  supabase-setup.md  troubleshooting.md
docs/production/: DEPLOYMENT_STRATEGY.md  IMPLEMENTATION_PLAN.md  PRODUCTION_ARCHITECTURE.md  PRODUCTION_CHECKLIST.md  README.md
docs/rules/: python-project-essentials.md  repository-hygiene-rules.md
docs/user/: usage.md  (+6 more)
scripts/: README.md  add_comprehensive_guides.py  add_echarts_pattern.py  build-docs.sh  cloud_generate_embeddings.py  load_single_auth_guide.py  migrate_to_cloud_embeddings.py  simple_generate_embeddings.py  test_comprehensive_examples.py
test/: run_all_tests.py  test_client.py  test_fastmcp_cli.py  test_http_client.py  test_pre_uvx_validation.py  test_uvx_integration.py
tests/: conftest_old.py  run_all_tests.py  test_archguard_integration.py  test_client.py  test_embedding_system.py  test_fastmcp_cli.py  test_http_client.py  test_mcp_protocol.py  test_symmetra_integration.py
(+96 files in other folders)
